# semantic-search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Dockerfile.prod.dockerignore  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3f8a1c2d4e5b_create_query_stats.py  7e2b9f1a3c6d_add_metrics_timestamps_to_query_stats.py
data/: qa_pairs.csv
scripts/: download_model.py
src/: dependencies.py  main.py
src/api/v1/: __init__.py  health.py  ingest.py  search.py  tasks.py
src/core/: config.py  logging.py  rate_limit.py
src/domain/: entities.py  exceptions.py
src/domain/interfaces/: data_loader.py  embedder.py  stats_repository.py  vector_store.py
src/infrastructure/csv/: data_loader.py
src/infrastructure/embedder/: embedder.py
src/infrastructure/postgres/: base.py
src/infrastructure/postgres/models/: __init__.py  query_stat.py
src/infrastructure/postgres/repositories/: stats.py
src/infrastructure/qdrant/: vector_store.py
src/schemas/: ingest.py  search.py  tasks.py
src/services/: ingest_service.py  search_service.py
src/tasks/: celery_app.py  ingest_task.py
